# boids

./: .gitignore  Cargo.toml  README.md  mise.toml
.cline/: cline_task_jan-5-2025_11-35-18-am.md  cline_task_jan-5-2025_11-42-46-am.md
examples/web/: index.html
examples/web-canvas/: flock-worker.js  index.html  render-worker.js
examples/web-gl/: flock-worker.js  index.html  render-worker.js
src/: boid.rs  flock.rs  lib.rs  quadtree.rs  species.rs
