[package]
name = "wasm-flock"
version = "0.1.0"
edition = "2021"
description = "A flock simulation library with WebAssembly support"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
rand = "0.8"
glam = "0.24"  # For vector math

# WebAssembly support
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
]}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["wasm"]
wasm = []
